[package]
name = "f1c100s-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcell = "0.1.2"
critical-section = { version = "1.2", optional = true }

[features]
critical-section = ["dep:critical-section"]
